change and alther theme

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-Amie
+theme: hexo-theme-phantom
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
