--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/amiechen/web-component-library#readme",
   "dependencies": {
-    "dragula": "^3.7.2"
+    "dragula": "^3.7.2",
+    "file-saver": "^1.3.8"
   }
 }
