--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "web-component-library",
-  "version": "1.0.0",
-  "description": "",
+  "name": "stitches",
+  "version": "0.5.0",
+  "description":
+    "web designers and developers' secret weapon. Generate html based on a collection of commonly used user interface patterns with no third-party css framework",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": ""
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/amiechen/web-component-library#readme",
   "dependencies": {
-    "dragula": "^3.7.2"
+    "body-parser": "^1.18.3",
+    "dragula": "^3.7.2",
+    "express": "^4.16.3"
   }
 }
