add new stats template

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "stitches",
   "version": "0.5.0",
-  "description":
-    "web designers and developers' secret weapon. Generate html based on a collection of commonly used user interface patterns with no third-party css framework",
-  "main": "index.js",
+  "description": "web designers and developers' secret weapon. Generate html based on a collection of commonly used user interface patterns with no third-party css framework",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "postcss stitches.css -o public/stitches.css",
