--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "postcss stitches.css -o public/stitches.css",
     "watch:css": "postcss stitches.css -o public/stitches.css -w",
-    "start": "npm run watch:css & node app.js"
+    "bundle": "browserify client.js -o bundle.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.5.0",
+    "browserify": "^16.2.2",
     "postcss-cli": "^5.0.0",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^11.1.0",
