tweaking file size

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
+    "purgecss": "^1.0.1",
     "tailwindcss": "^0.5.3"
   }
 }
