--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dragula": "^3.7.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "imagesloaded": "^4.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^8.5.0",
