--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "postcss stitches.css -o public/stitches.css",
     "watch:css": "postcss stitches.css -o public/stitches.css -w",
-    "bundle": "browserify client.js -o bundle.js",
-    "start": "npm run bundle & npm run watch:css & node app.js"
+    "start": "npm run build:app & npm run build:css & npm run build:service & npm run start:service",
+    "start:dev": "(npm run build:service && npm run start:service:dev) & npm run watch:app & npm run watch:css & npm run watch:service",
+    "watch:app": "watchify client.js -o public/client.js",
+    "build:app": "browserify client.js | babel --presets minify --out-file public/client.js",
+    "start:service": "node ./lib/app.js",
+    "start:service:dev": "nodemon ./lib/app.js",
+    "watch:service": "babel --watch app.js -d ./lib",
+    "build:service": "babel app.js -d ./lib"
   },
   "repository": {
     "type": "git",
@@ -39,7 +45,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-minify": "^0.4.3",
     "browserify": "^16.2.2",
+    "nodemon": "^1.18.3",
     "postcss-cli": "^5.0.0",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^11.1.0",
@@ -47,6 +56,7 @@
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
     "purgecss": "^1.0.1",
-    "tailwindcss": "^0.5.3"
+    "tailwindcss": "^0.5.3",
+    "watchify": "^3.11.0"
   }
 }
